--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,3 +1,31 @@
+@import '../../styles/vars';
+
 .Login {
-  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+  &__inner {
+    min-width: 220px;
+    padding: 32px 16px;
+    background-color: $white;
+    box-shadow: 0px 4px 20px rgba(35, 33, 61, 0.05);
+    border-radius: 4px;
+  }
+
+
+  &__heading {
+    margin: 0;
+    margin-bottom: 16px;
+    color: $primary;
+    text-align: center;
+  }
+
+
+  &__submit {
+    width: 100%;
+  }
 }
